--- a/ressaite-web/src/styles/_css_reset.scss
+++ b/ressaite-web/src/styles/_css_reset.scss
@@ -36,6 +36,11 @@ ul {
   font-weight: normal;
 }
 
+a {
+  color: var(--rst-txt-color);
+  text-decoration: none;
+}
+
 ol,
 ul {
   list-style: none;
