--- a/ressaite-web/src/styles/utils/page.scss
+++ b/ressaite-web/src/styles/utils/page.scss
@@ -1,4 +1,5 @@
 .central-aligned-page {
-  width: 80%;
-  margin: 24px auto 0px;
+  // width: 80%;
+  // margin: 24px auto 0px;
+  padding: 24px 10% 0;
 }
