--- a/ressaite-web/src/styles/components/rst-button.scss
+++ b/ressaite-web/src/styles/components/rst-button.scss
@@ -1,6 +1,7 @@
 .rst-button {
   border-radius: 8px;
-  padding: 8px;
+  border: none;
+  padding: 8px 16px;
   text-align: center;
   transition: background-color 0.25s;
 }
