--- a/ressaite-web/src/styles/components/rst-card.scss
+++ b/ressaite-web/src/styles/components/rst-card.scss
@@ -1,5 +1,6 @@
 .rst-card {
   background-color: var(--rst-bg-content);
+  border-radius: 8px;
   // https://m2.material.io/components/cards
   box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12);
