--- a/ressaite-web/src/styles/main.scss
+++ b/ressaite-web/src/styles/main.scss
@@ -2,6 +2,7 @@
 @forward './components/rst-button.scss';
 @forward './components/rst-card.scss';
 @forward './components/rst-dropdown.scss';
+@forward './components/rst-table.scss';
 @forward './utils/flex.scss';
 @forward './utils/page.scss';
 
@@ -16,5 +17,13 @@
   --rst-bg-content-hover: #efefef;
 
   --rst-txt-color: #333333;
+  --rst-txt-sub: #535353;
   --rst-txt-color-alternate: #ffffff;
+
+  // https://banc.digital/blog/typography-font-sizes-styles-formats
+  --rst-font-size-small: 12px;
+  --rst-font-size-body: 14px;
+  --rst-font-size-h3: 18px;
+  --rst-font-size-h2: 24px;
+  --rst-font-size-h1: 36px;
 }
