--- a/ressaite-web/src/styles/components/rst-table.scss
+++ b/ressaite-web/src/styles/components/rst-table.scss
@@ -6,4 +6,10 @@
   flex-direction: row;
   flex-wrap: wrap;
   width: 100%;
+
+  border-top: 1px solid #aaa;
+
+  &:last-of-type{
+    border-bottom: 1px solid #aaa;
+  }
 }
