--- a/ressaite-web/src/styles/components/rst-button.scss
+++ b/ressaite-web/src/styles/components/rst-button.scss
@@ -29,4 +29,12 @@
 }
 
 .rst-button-group {
+  &.fluid {
+    display: flex;
+    width: 100%;
+
+    .rst-button {
+      flex-grow: 1;
+    }
+  }
 }
