--- a/ressaite-web/src/styles/main.scss
+++ b/ressaite-web/src/styles/main.scss
@@ -2,6 +2,7 @@
 @forward './components/rst-button.scss';
 @forward './components/rst-card.scss';
 @forward './components/rst-dropdown.scss';
+@forward './components/rst-form.scss';
 @forward './components/rst-table.scss';
 @forward './utils/flex.scss';
 @forward './utils/page.scss';
