--- a/ressaite-web/src/styles/main.scss
+++ b/ressaite-web/src/styles/main.scss
@@ -12,6 +12,7 @@
 
   --rst-primary: #d38c28;
   --rst-primary-active: #b7761b;
+  --rst-danger: #ff3300;
 
   --rst-bg-app: #fafafa;
   --rst-bg-content: #ffffff;
