--- a/ressaite-web/src/styles/main.scss
+++ b/ressaite-web/src/styles/main.scss
@@ -17,6 +17,7 @@
   --rst-bg-app: #fafafa;
   --rst-bg-content: #ffffff;
   --rst-bg-content-hover: #efefef;
+  --rst-divider: #aaa;
 
   --rst-txt-color: #333333;
   --rst-txt-sub: #535353;
