--- a/ressaite-web/src/styles/components/rst-button.scss
+++ b/ressaite-web/src/styles/components/rst-button.scss
@@ -38,7 +38,7 @@
   border: 1px solid var(--rst-danger);
 
   &:hover {
-    background-color: var(--rst-bg-content-hover);
+    background-color: var(--rst-danger-active);
   }
 }
 
