--- a/ressaite-web/src/styles/components/rst-dropdown.scss
+++ b/ressaite-web/src/styles/components/rst-dropdown.scss
@@ -1,8 +1,12 @@
 .rst-dropdown {
+  position: relative;
 }
 
 .rst-dropdown-content {
   display: none;
+  position: absolute;
+  width: 100%;
+  background-color: var(--rst-bg-content);
 }
 
 .rst-dropdown:hover {
