--- a/ressaite-web/src/styles/utils/page.scss
+++ b/ressaite-web/src/styles/utils/page.scss
@@ -1,9 +1,9 @@
 @use "./../lib/include-media" as *;
 
 .central-aligned-page {
-  // width: 80%;
-  // margin: 24px auto 0px;
   padding: 24px 10% 0;
+  flex-grow: 1; // to fill container width
+  overflow: auto; // make scroll here to avoid scrolling on navbar
 
   @include media('<tablet') {
     padding: 12px 8px 24px;
