--- a/ressaite-web/src/styles/_include.scss
+++ b/ressaite-web/src/styles/_include.scss
@@ -1,4 +1,5 @@
-@forward "./lib/_include-media.scss";
+@forward './lib/_include-media.scss';
+@forward './mixins/rst-hamburger.scss';
 
 $plop: magenta;
 
