styling login page, login button and signup page

--- a/ressaite-web/src/styles/components/rst-dropdown.scss
+++ b/ressaite-web/src/styles/components/rst-dropdown.scss
@@ -9,7 +9,9 @@
   background-color: var(--rst-bg-content);
 }
 
-.rst-dropdown:hover {
+.rst-dropdown:hover,
+.rst-dropdown:active,
+.rst-dropdown:focus {
   .rst-dropdown-content {
     display: block;
   }
