--- a/ressaite-web/src/styles/main.scss
+++ b/ressaite-web/src/styles/main.scss
@@ -3,6 +3,7 @@
 @forward './components/rst-card.scss';
 @forward './components/rst-dropdown.scss';
 @forward './components/rst-form.scss';
+@forward './components/rst-link.scss';
 @forward './components/rst-table.scss';
 @forward './utils/flex.scss';
 @forward './utils/page.scss';
