update material form and controller

--- a/ressaite-web/src/core/styles/_include.scss
+++ b/ressaite-web/src/core/styles/_include.scss
@@ -1,4 +1,5 @@
 @forward './lib/_include-media.scss';
+@forward './mixins/grid.scss';
 @forward './mixins/rst-hamburger.scss';
 @forward './variables/z-index';
 
