--- a/ressaite-web/src/core/styles/main.scss
+++ b/ressaite-web/src/core/styles/main.scss
@@ -17,6 +17,7 @@
   --rst-primary-active: rgba(39, 185, 115, 1);
   --rst-danger: rgba(253, 121, 118, 1);
   --rst-danger-active: rgba(253, 121, 118, 0.8);
+  --rst-disabled: #999;
 
   --rst-bg-app: #fafafa; // https://dribbble.com/shots/14190307-Recipe-app/attachments/5824756?mode=media
   --rst-bg-content: #ffffff;
