--- a/ressaite-web/src/core/styles/utils/page.scss
+++ b/ressaite-web/src/core/styles/utils/page.scss
@@ -1,4 +1,4 @@
-@use "./../lib/include-media" as *;
+@use './../lib/include-media' as *;
 
 .central-aligned-page {
   padding: 24px 10% 0;
@@ -7,5 +7,11 @@
 
   @include media('<tablet') {
     padding: 12px 8px 24px;
+  }
+}
+
+.rst-page-section {
+  & + .rst-page-section {
+    margin-block-start: 16px;
   }
 }
